--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
         <div class="content-wrapper">
             <div class="center">
                 <br />
-                <p class="copyrights-footer">&copy; @DateTime.Now.Year - @Constants.APP_NAME</p>
+                <p class="copyrights-footer">&copy; @DateTime.Now.Year - @Constants.APP_NAME @Constants.APP_VERSION</p>
             </div>
         </div>
     </footer>
