--- a/SmartCMS/Views/Home/Index.cshtml
+++ b/SmartCMS/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
 <script>
     var selectedCategoryId = 0;
     $(document).ready(function () {
-        displayAnswer("你好，<br/>欢迎使用" + "@SmartCMS.Models.Constants.APP_NAME" + "@SmartCMS.Models.Constants.APP_VERSION");
+        displayResponse("你好，<br/>欢迎使用" + "@SmartCMS.Models.Constants.APP_NAME" + "@SmartCMS.Models.Constants.APP_VERSION" + " (*^__^*)");
     });
     $('#myQuestion').keydown(function(e){
         if (e.keyCode == 13) {
