--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -887,7 +887,8 @@ ul.dropdown-menu
     background-color: #fff;
     height: 350px;
     overflow-y: auto;
-    padding:10px;
+    padding:10px 5px;
+    font-size:12px;
 }
 #chat-input-container{
     width: 100%;    
@@ -908,6 +909,7 @@ ul.dropdown-menu
 {
     width:100%;
     text-align:right;
+    clear:both;
 }
 
 
@@ -978,3 +980,77 @@ ul.dropdown-menu
 }
 
 .result a{color: #009EA1;}
+
+.answer-content{
+    line-height: 1.6em;
+    border: 1px solid #D7D7D7;
+    background: #f6f6f6;
+    padding: 12px;
+    display: inline-block;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    float: left;
+    margin-top: 0px;
+}
+.answer-content-after {
+    content: "";
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    font-size: 0;
+    border: 6px solid transparent;
+    border-left: 0;
+    border-right: 6px solid #D7D7D7;
+    position: relative;
+    left: -6px;
+    top: 25px;
+}
+.answer-name
+{
+    text-align: center;
+    display: block;
+    width: 65px;
+    padding-top: 50px;
+    float: left;
+    background: url(./images/ava_5.png) no-repeat center top;
+    background-size:75%;
+}
+
+.question-content {
+    line-height: 1.6em;
+    text-align: left;
+    border: 1px solid #9DDD85;
+    background: #b0f495;
+    padding: 12px;
+    display: inline-block;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+    margin-top:1px;
+}
+.question-name{
+    text-align: center;
+    float: right;
+    display: block;
+    width: 50px;
+    padding-top: 43px;
+    background: url(./images/ava_2.png) no-repeat center top;
+    background-size: 85%;
+}
+.question-content-after{
+    content: "";
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    font-size: 0;
+    border: 6px solid transparent;
+    /* border-left: 0; */
+    /* border-right: 6px solid #D7D7D7; */
+    position: relative;
+    /* left: -6px; */
+    top: 12px;
+    border-right: 0;
+    border-left: 6px solid #9DDD85;
+    left: auto;
+    right: 0px;
+    float: right;
+}
