--- a/SmartCMS/Views/Account/Manage.cshtml
+++ b/SmartCMS/Views/Account/Manage.cshtml
@@ -19,7 +19,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        MY ACCOUNT         <div style="float:right">你当前使用以下帐号登录: <text><strong>@User.Identity.Name<small>(@me.RoleName)</small></strong></text></div>
+        MY ACCOUNT         <div style="float:right">你当前使用以下帐号登录: <text>@User.Identity.Name<small>(@me.RoleName)</small></text></div>
     </div>
     <div class="panel-body">
 
