--- a/SmartCMS/Views/CMS/AddArticle.cshtml
+++ b/SmartCMS/Views/CMS/AddArticle.cshtml
@@ -38,6 +38,7 @@
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.CategoryId)
+            @Html.HiddenFor(m => m.PendingId)
             <div style="width:698px; margin:auto; text-align:center;">
                 <div class="form-group">
                     <div class='input-group date'>
