--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -91,7 +91,9 @@
                                         <ul class="dropdown-menu ">
                                             <li>@Html.ActionLink("问答分类", "Categories", "CMS")</li>
                                             <li class="divider"></li>
-                                            <li>@Html.ActionLink("热词统计", "Hot", "CMS")</li>
+                                            <li>@Html.ActionLink("热词一览", "HotWords", "CMS")</li>
+                                            <li class="divider"></li>
+                                            <li>@Html.ActionLink("待回答问题", "PendingQuestions", "CMS")</li>
                                         </ul>
                                     </li>
                                 }
