--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -1058,3 +1058,30 @@ ul.dropdown-menu
     right: 0px;
     float: right;
 }
+
+
+.ui-autocomplete {
+    background: #efeeef;
+    border:1px solid #ddd;
+    border-radius: 0px;
+    max-width:840px;
+    margin-top:20px;
+    padding:10px;
+}
+.ui-autocomplete li{
+    list-style:none;
+}
+.ui-autocomplete.source:hover {
+    background: #7ac0da;
+}
+
+.ui-menu .ui-menu-item a{
+    padding:2px 10px;
+    font-size:12px;
+    text-decoration: none;
+    display:block;
+    cursor:pointer;
+}
+.ui-menu .ui-menu-item a:hover{
+    background-color:#fff;
+}
