--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -884,11 +884,20 @@ ul.dropdown-menu
 
 #chat-content-container{
     width: 100%;
-    background-color: #fff;
     height: 350px;
     overflow-y: auto;
     padding:10px 5px;
     font-size:13px;
+    background-color: #fff;
+}
+.loading{
+    background: url(images/loading_dots.gif) no-repeat -20px 297px;
+    background-color: #fff;
+    background-size: 10%;
+}
+.loaded{
+    background-image:none;
+    background-color: #fff;
 }
 #chat-input-container{
     width: 100%;    
@@ -1061,12 +1070,12 @@ ul.dropdown-menu
 
 
 .ui-autocomplete {
-    background: #efeeef;
-    border:1px solid #ddd;
+    background: #ddd;
+    border:1px solid #ccc;
     border-radius: 0px;
     max-width:840px;
-    margin-top:20px;
-    padding:10px;
+    margin-top:-9px;
+    padding:10px 5px;
 }
 .ui-autocomplete li{
     list-style:none;
@@ -1077,11 +1086,14 @@ ul.dropdown-menu
 
 .ui-menu .ui-menu-item a{
     padding:2px 10px;
-    font-size:12px;
+    font-size:13px;
     text-decoration: none;
     display:block;
     cursor:pointer;
+    border-radius: 5px;
 }
 .ui-menu .ui-menu-item a:hover{
-    background-color:#fff;
+    background-color:#009EA1;
+    color:#fff;
+
 }
