--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -101,7 +101,11 @@ h5 a:link, h5 a:visited, h5 a:active {
 #body {
     background-color: #efeeef;
     clear: both;
-    padding-bottom: 35px;
+    padding-bottom: 20px;    
+}
+
+#body.home{
+    border-top: 1px solid #ddd;
 }
 
     .main-content {
@@ -147,9 +151,12 @@ footer {
 ----------------------------------------------------------*/
 #login {
     display: block;
-    font-size: .85em;
-    margin: 0 0 10px;
+    font-size: .9em;
+    margin: 0px 4px;
     text-align: right;
+}
+#login.cms{
+    margin:30px 0px 0px 0px;
 }
 
     #login a {
@@ -836,7 +843,7 @@ ul.dropdown-menu
 }
 
 .chat-right{
-    height: 481px;
+    height: 515px;
     width: 350px;
     float: right;
     background-color:#eee;
@@ -857,7 +864,7 @@ ul.dropdown-menu
 {
     padding: 10px 15px;
     border-left: 1px solid #ddd;
-    height: 440px;
+    height: 473px;
     overflow: auto;
 }
 .nav-tabs>li>a {
@@ -884,14 +891,14 @@ ul.dropdown-menu
 
 #chat-content-container{
     width: 100%;
-    height: 350px;
+    height: 380px;
     overflow-y: auto;
     padding:10px 5px;
     font-size:13px;
     background-color: #fff;
 }
 .loading{
-    background: url(images/loading_dots.gif) no-repeat -20px 297px;
+    background: url(images/loading_dots.gif) no-repeat -20px 327px;
     background-color: #fff;
     background-size: 10%;
 }
@@ -1076,6 +1083,8 @@ ul.dropdown-menu
     max-width:840px;
     margin-top:-9px;
     padding:10px 5px;
+    height: 200px;
+    overflow: auto;
 }
 .ui-autocomplete li{
     list-style:none;
