--- a/SmartCMS/Views/Home/Index.cshtml
+++ b/SmartCMS/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IEnumerable<SmartCMS.Models.CategoryViewModel>
 
 @{
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
+}
+
+@{
     ViewBag.Title = "智能客服";
 }
 
@@ -35,8 +39,8 @@
                 <div class="tabbable">
                     
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#TabCategory" data-toggle="tab">问答分类</a></li>
-                        <li><a href="#TabHotTopic" data-toggle="tab">热点问题</a></li>
+                        <li class="active"><a href="#TabCategory" data-toggle="tab">知识分类</a></li>
+                        <li><a href="#TabHotTopic" data-toggle="tab">热门问答</a></li>
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="TabCategory">
