--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
     @Scripts.Render("~/Content/bower_components/datetimepicker/build/jquery.datetimepicker.full.js")
 </head>
 @{
-    var logoUrl = "http://www.hisense.com/images/backstage/c2159f29b69440d88aaa3396871d2f88.png";
+    var logoUrl = "/Content/Images/logo.png";
 }
 <body>
     <header>
@@ -54,7 +54,7 @@
                 <p class="site-title"><a href="~/"><img src="@logoUrl" style="height:70px;"></a>@Html.ActionLink(Constants.APP_NAME, "Index", "Home")</p>
             </div>
             <div class="float-right" style="margin: 20px 15px 0 0;">
-                <section id="login">
+                <section id="login" class="cms">
                     @Html.Partial("_LoginPartial")
                 </section>
             </div>
@@ -86,18 +86,28 @@
                                 {
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                            内容维护 <b class="caret"></b>
+                                            知识管理 <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu ">
-                                            <li>@Html.ActionLink("问答分类", "Categories", "CMS")</li>
+                                            <li>@Html.ActionLink("知识分类", "Categories", "CMS")</li>
                                             <li class="divider"></li>
-                                            <li>@Html.ActionLink("热词一览", "HotWords", "CMS")</li>
-                                            <li class="divider"></li>
-                                            <li>@Html.ActionLink("待回答问题", "PendingQuestions", "CMS")</li>
+                                            <li>@Html.ActionLink("热词一览", "HotWords", "CMS")</li>                                            
                                         </ul>
                                     </li>
                                 }
                                 
+                                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
+                                        || User.IsInRole(Constants.Roles.ROLE_EDITOR))
+                                {                                    
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                            问答管理 <b class="caret"></b>
+                                        </a>
+                                        <ul class="dropdown-menu ">
+                                            <li>@Html.ActionLink("待回答问题", "PendingQuestions", "CMS")</li>
+                                        </ul>
+                                    </li>
+                                }
                             </ul>
                         </div>
                     </div>
