--- a/SmartCMS/Views/Shared/_LayoutHome.cshtml
+++ b/SmartCMS/Views/Shared/_LayoutHome.cshtml
@@ -1,16 +1,94 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    @RenderBody()
+﻿@using SmartCMS.Models
 
-    @Scripts.Render("~/bundles/jquery")
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - @Constants.APP_NAME</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
+    @Styles.Render("~/Content/site.css")
+    <!-- DataTables CSS -->
+    @Styles.Render("~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css")
+    @Styles.Render("~/Content/bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css")    
+    @Scripts.Render("~/bundles/modernizr")
+    <!-- jQuery -->
+    @Scripts.Render("~/Content/bower_components/jquery/dist/jquery.min.js")
+    @Scripts.Render("~/Content/js/jquery-ui.min.js") <!-- jQuery UI -->
+    @Scripts.Render("~/Content/js/jquery.easing.1.3.js") <!-- jQuery Easing - Requirred for Lightbox + Pie Charts-->
+    <!-- Bootstrap -->
+    @Scripts.Render("~/Content/bower_components/bootstrap/dist/js/bootstrap.min.js")
+    <!-- Charts -->
+    @Scripts.Render("~/Content/js/charts/jquery.flot.min.js") <!-- Flot Main -->
+    @Scripts.Render("~/Content/js/charts/jquery.flot.categories.min.js")
+    @Scripts.Render("~/Content/js/charts/jquery.flot.pie.min.js")
+    @Scripts.Render("~/Content/js/charts/jquery.flot.time.js") <!-- Flot sub -->
+    @Scripts.Render("~/Content/js/charts/jquery.flot.animator.min.js") <!-- Flot sub -->
+    @Scripts.Render("~/Content/js/charts/jquery.flot.resize.min.js") <!-- Flot sub - for repaint when resizing the screen -->
+    @Scripts.Render("~/Content/bower_components/jquery.cookie.js")
+    <!-- DataTables JavaScript -->
+    @Scripts.Render("~/Content/bower_components/datatables/media/js/jquery.dataTables.js")
+    @Scripts.Render("~/Content/bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js")
+    @Scripts.Render("~/Content/js/sparkline.min.js") <!-- Sparkline - Tiny charts -->
+    @Scripts.Render("~/Content/js/easypiechart.js") <!-- EasyPieChart - Animated Pie Charts -->
+    @Scripts.Render("~/Content/js/charts.js") <!-- All the above chart related functions -->
+    
+    <!-- RichEditer-->
+    @Styles.Render("~/Content/bower_components/markitup/skins/markitup/style.css")
+    @Styles.Render("~/Content/bower_components/markitup/sets/html/style.css")
+    @Scripts.Render("~/Content/bower_components/markitup/jquery.markitup.js") 
+    @Scripts.Render("~/Content/bower_components/markitup/sets/html/set.js")
+    
+    <!-- DateTimePicker-->
+    @Styles.Render("~/Content/bower_components/datetimepicker/jquery.datetimepicker.css")
+    @Scripts.Render("~/Content/bower_components/datetimepicker/build/jquery.datetimepicker.full.js")
+</head>
+@{    
+    var logoUrl = "/Content/Images/logo.png";
+}
+<body>
+    <header>
+        <div class="content-wrapper">
+            <div class="float-left" style="margin-bottom:5px;">
+                <p class="site-title"><a href="~/"><img src="@logoUrl" style="height:70px;"></a>@Html.ActionLink(Constants.APP_NAME, "Index", "Home")</p>
+            </div>
+            <div class="float-right" style="margin: 20px 15px 0 0;">
+                <section id="login">
+                    @Html.Partial("_LoginPartial")
+                </section>
+
+                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN) || User.IsInRole(Constants.Roles.ROLE_EDITOR))
+                {
+                    <text>
+                    <div style="float:right;">                    
+                        @Html.ActionLink("智库管理", "PendingQuestions", "CMS", null, new { target = "_blank" })
+                        <a href="javascript:addFavorite();">收藏本站</a>
+                        @Html.ActionLink("退出","LogOff","Account")
+                    </div>
+                    </text>
+                    
+                }
+                
+            </div>
+            
+        </div>
+    </header>
+    <div id="body" class="home">
+        @RenderSection("featured", required: false)
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
+    <footer>
+        <div class="content-wrapper">
+            <div class="center">
+                <br />
+                <p class="copyrights-footer">&copy; @DateTime.Now.Year - @Constants.APP_NAME @Constants.APP_VERSION</p>
+            </div>
+        </div>
+    </footer>
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
