--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -152,7 +152,7 @@ footer {
 #login {
     display: block;
     font-size: .9em;
-    margin: 0px 4px;
+    margin: 10px 4px 0px 0px;
     text-align: right;
 }
 #login.cms{
