--- a/SmartCMS/Views/Account/UserInfo.cshtml
+++ b/SmartCMS/Views/Account/UserInfo.cshtml
@@ -3,20 +3,17 @@
     ViewBag.Title = "用户信息";
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
-
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("智库管理", "Index", "CMS") </li>
+        <li>@Html.ActionLink("用户管理", "UserList", "Account")</a></li>
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        USER ACCOUNT         
+        User Account         
     </div>
     <div class="panel-body">
 
@@ -59,7 +56,7 @@
             </div>
             <div class="form-group">
                 <div class='input-group date'>
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", disabled = "true" })
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", disabled = "true", placeholder = "邮箱" })
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-bookmark"></span>
                     </span>
@@ -81,7 +78,7 @@
                     </span>
                 </div>
             </div>
-            <a href="~/account/userlist" class="btn btn-success" style="color:white;">返 回</a>
+            <a href="~/Account/UserList" class="btn btn-success" style="color:white;">返 回</a>
 
             <button type="submit" class="btn btn-success">更 新</button>
         </div>
