--- a/SmartCMS/Views/Account/UserList.cshtml
+++ b/SmartCMS/Views/Account/UserList.cshtml
@@ -4,19 +4,16 @@
     ViewBag.Title = "用户管理";
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("智库管理", "Index", "CMS") </li>
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        USER LIST
+        Users List
     </div>
     <div class="panel-body">
         @if (!ViewData.ModelState.IsValid)
@@ -52,14 +49,14 @@
                     @foreach (SmartCMS.Models.UserViewModel item in Model)
                     {
                         <tr class="odd">
-                            <td style="text-align: center; font-weight: bold;"><a href="/account/userinfo?id=@item.ID" style="padding:5px;">@Html.DisplayFor(modelItem => item.ID)</a></td>
+                            <td style="text-align: center; font-weight: bold;"><a href="~/Account/UserInfo/@item.ID" style="padding:5px;">@Html.DisplayFor(modelItem => item.ID)</a></td>
                             <td style="text-align: left; padding-left:15px;">@Html.DisplayFor(modelItem => item.UserName) @if (item.Locked) {<span class="glyphicon glyphicon-lock"></span>}</td>
                             <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RealName)</td>
                             <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RoleName)</td>
                             <td style="text-align: center;">@Html.DisplayFor(modelItem => item.RegisterTime)</td>
                             <td style="text-align: center;">@Html.DisplayFor(modelItem => item.LastLoginTime)</td>
                             <td style="text-align: center;">
-                                <a href="~/account/userinfo?id=@item.ID" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
+                                <a href="~/Account/UserInfo/@item.ID" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
                                 @if(item.Locked)
                                 {
                                     using (Html.BeginForm("Unlock", "Account", FormMethod.Post, new { id = "unlockForm_" + item.ID, style = "display:none;" }))
@@ -90,7 +87,7 @@
                     }
                 </tbody>
             </table>
-            <a href="~/account/create" class="btn btn-success" style="float: left; margin-top: -42px; color:white;">添加用户</a>
+            <a href="~/Account/Create" class="btn btn-success" style="float: left; margin-top: -42px; color:white;">添加用户</a>
         </div>
         <!-- /.Table -->
     </div>
