--- a/SmartCMS/Views/CMS/AddCategory.cshtml
+++ b/SmartCMS/Views/CMS/AddCategory.cshtml
@@ -2,28 +2,33 @@
 @{
     if(Model.ParentId !=0)
     {
-        ViewBag.Title = "添加子分类 - " + ViewBag.Category;
+        //ViewBag.Title = "添加子分类 - " + ViewBag.Category;
+        ViewBag.Title = "添加知识分类";
     }
     else
     {
-        ViewBag.Title = "添加问答分类";
+        ViewBag.Title = "添加知识分类";
     }
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
-
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("知识管理", "Categories", "CMS") </li>
+        @if (ViewBag.Breadcrumbs != null)
+        {
+            foreach (string k in ViewBag.Breadcrumbs)
+            {
+                string[] v = k.Split('#');
+                <li><a href="/CMS/Category/@v[0]">@v[1]</a></li>
+            }
+        }
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        ADD NEW CATEGORY
+        New Category
     </div>
     <div class="panel-body">
 
