--- a/SmartCMS/Views/Account/Create.cshtml
+++ b/SmartCMS/Views/Account/Create.cshtml
@@ -3,20 +3,17 @@
     ViewBag.Title = "添加用户";
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
-
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("智库管理", "Index", "CMS") </li>
+        <li>@Html.ActionLink("用户管理", "UserList", "Account")</a></li>
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        ADD NEW ACCOUNT
+        New Account
     </div>
     <div class="panel-body">
 
@@ -80,7 +77,7 @@
                         </span>
                     </div>
                 </div>
-                <a href="~/account/userlist" class="btn btn-success" style="color:white;">返 回</a>
+                <a href="~/Account/UserList" class="btn btn-success" style="color:white;">返 回</a>
 
                 <button type="submit" class="btn btn-success">保 存</button>
             </div>
