--- a/SmartCMS/Views/CMS/EditCategory.cshtml
+++ b/SmartCMS/Views/CMS/EditCategory.cshtml
@@ -3,20 +3,25 @@
     ViewBag.Title = "编辑分类";    
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("知识管理", "Categories", "CMS") </li>
+        @if (ViewBag.Breadcrumbs != null)
+        {
+            foreach (string k in ViewBag.Breadcrumbs)
+            {
+                string[] v = k.Split('#');
+                <li><a href="/CMS/Category/@v[0]">@v[1]</a></li>
+            }
+        }
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
 
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        EDIT CATEGORY
+        Edit Category
     </div>
     <div class="panel-body">
 
