--- a/SmartCMS/Views/CMS/PendingQuestions.cshtml
+++ b/SmartCMS/Views/CMS/PendingQuestions.cshtml
@@ -4,19 +4,18 @@
     ViewBag.Title = "待回答问题";
 }
 
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title  </h1>
-            </hgroup>
-        </div>
-    </section>
-}
+
+<div id="breadcrumbs">
+    <ul>
+        <li>@Html.ActionLink("智库管理", "Index", "CMS") </li>
+        <li><a href="#">@ViewBag.Title</a></li>
+    </ul>
+</div>
+
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        QUESTIONS TO ANSWER
+        Pending Questions
     </div>
     <div class="panel-body">
         
@@ -29,7 +28,7 @@
                     <tr>
                         <th>问题</th>
                         <th>分类</th>
-                        <th style="text-align: center;">最近提问</th>
+                        <th style="text-align: center;">最近提问时间</th>
                         <th style="text-align: center;">提问次数</th>
                         <th style="text-align: center;">操作</th>
                     </tr>
