--- a/SmartCMS/Views/CMS/Categories.cshtml
+++ b/SmartCMS/Views/CMS/Categories.cshtml
@@ -38,7 +38,20 @@
         <hr/>
         @foreach(SmartCMS.Models.CategoryViewModel category in Model)
         {            
-            <a href="~/CMS/Category/@category.Id" class="category-item btn btn-default"><b>@category.Name</b></a>            
+            <div class="panel panel-default" style="width:650px;">
+                <div class="panel-heading">
+                    <a href="~/CMS/Category/@category.Id" class="category-item"><b>@category.Name</b></a>            
+                </div>
+                <div class="panel-body">
+                    @if (category.SubCategories !=null )
+                    {
+                        foreach (SmartCMS.Models.CategoryViewModel sc in category.SubCategories)
+                        {
+                            <a href="~/CMS/Category/@sc.Id" class="category-item btn btn-default"><b>@sc.Name</b></a>
+                        }
+                    }                    
+                </div>
+            </div>                        
         }
     </div>
     <!-- /.panel-body -->
