--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -71,13 +71,13 @@
                                         系统设置 <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu ">
-                                        <li><a href="/account/userlist"><span class="glyphicon glyphicon-user"></span> 用户管理</a></li>
+                                        <li><a href="~/Account/UserList"><span class="glyphicon glyphicon-user"></span> 用户管理</a></li>
                                         <li class="divider"></li>
-                                        <li><a href="/admin/log"><span class="glyphicon glyphicon-list-alt"></span> 系统日志</a></li>
+                                        <li><a href="~/Admin/Log"><span class="glyphicon glyphicon-list-alt"></span> 系统日志</a></li>
                                     </ul>
                                 </li>
                             }
-                            <li><a href="/account/logoff" style="padding: 15px 10px !important; margin-right:5px;"><span class="glyphicon glyphicon-log-out"></span> 注销</a></li>
+                            <li><a href="~/Account/LogOff" style="padding: 15px 10px !important; margin-right:5px;"><span class="glyphicon glyphicon-log-out"></span> 注销</a></li>
                         </ul>
                         <div>
                             <ul class="nav navbar-nav navbar-left">
